--- a/frontend/src/pages/home/home.html
+++ b/frontend/src/pages/home/home.html
@@ -14,7 +14,7 @@
         <ion-item *ngFor="let i of items">{{i}}</ion-item>
       </ion-list>
 
-      <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+      <ion-infinite-scroll *ngIf="hasMoreData" (ionInfinite)="doInfinite($event)">
         <ion-infinite-scroll-content></ion-infinite-scroll-content>
       </ion-infinite-scroll>
     </div>
