--- a/frontend/src/pages/home/home.html
+++ b/frontend/src/pages/home/home.html
@@ -7,5 +7,6 @@
 </ion-header>
 
 <ion-content padding>
- <vessel></vessel>
+ <vessel [vessel]="vessel"></vessel>
+ <vessel [vessel]="vessel"></vessel>
 </ion-content>
