--- a/frontend/src/pages/notification-center/notification-center.html
+++ b/frontend/src/pages/notification-center/notification-center.html
@@ -15,8 +15,8 @@
 
 <ion-content padding>
   <div>
-    <notification [text]="'Hey this is a notification'"></notification>
-    <notification [text]="'This is another notification'"></notification>
-    <notification [text]="'Jef, please style this shit'"></notification>
+    <notification [notification]="notification"></notification>
+    <notification [notification]="notification"></notification>
+    <notification [notification]="notification"></notification>
   </div>
 </ion-content>
