chore(frontend): update login/register

--- a/frontend/src/pages/home/home.html
+++ b/frontend/src/pages/home/home.html
@@ -9,4 +9,6 @@
 <ion-content padding>
  <vessel [vessel]="vessel"></vessel>
  <vessel [vessel]="vessel"></vessel>
+
+ <button full ion-button color="danger" (click)="logoutUser()">Logout</button>
 </ion-content>
