notification icon fixed + navigation

--- a/frontend/src/pages/home/home.html
+++ b/frontend/src/pages/home/home.html
@@ -3,6 +3,11 @@
     <ion-title>
       Ionic Blank
     </ion-title>
+    <ion-buttons end>
+        <button ion-button icon-only (click)="goToNotifs()">
+            <ion-icon name="notifications"></ion-icon>
+        </button>
+      </ion-buttons>
   </ion-navbar>
 </ion-header>
 
