--- a/frontend/src/pages/notification-center/notification-center.html
+++ b/frontend/src/pages/notification-center/notification-center.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{vessel.id}}</ion-title>
+    <ion-title>Notifications</ion-title>
   </ion-navbar>
 
 </ion-header>
