completed + project name

--- a/frontend/src/pages/home/home.html
+++ b/frontend/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Project TAE
     </ion-title>
     <ion-buttons end>
         <button id="notification-button" ion-button icon-only (click)="goToNotifs()">
