--- a/frontend/src/pages/home/home.html
+++ b/frontend/src/pages/home/home.html
@@ -17,11 +17,7 @@
 </ion-header>
 
 <ion-content padding>
-    <div ng-for="vessel in vessels">
+    <div *ngFor="let vessel of vessels">
       <vessel [vessel]="vessel"></vessel>
     </div>
-
- <!-- <vessel [vessel]="vessel"></vessel> -->
-
- <!-- <button full ion-button color="danger" (click)="logoutUser()">Logout</button> -->
 </ion-content>
