--- a/frontend/src/pages/login/login.html
+++ b/frontend/src/pages/login/login.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the LoginPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -39,7 +33,7 @@
       </ion-col>
     </ion-row>
   </form>
-  <button ion-button class="register-btn" block clear (click)="registerPage()">Create New Account</button>
+  <!--<button ion-button class="register-btn" block clear (click)="registerPage()">Create New Account</button>-->
 
   <p class='error-message' *ngIf="hasError">{{errorMessage}}</p>
 </ion-content>
