--- a/frontend/src/pages/notification-center/notification-center.html
+++ b/frontend/src/pages/notification-center/notification-center.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the NotificationCenterPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -15,8 +9,6 @@
 
 <ion-content padding>
   <div>
-    <notification [notification]="notification"></notification>
-    <notification [notification]="notification"></notification>
-    <notification [notification]="notification"></notification>
+    <notification *ngFor="let notification of notifications" [notification]="notification"></notification>
   </div>
 </ion-content>
