--- a/frontend/src/pages/port-call/port-call.html
+++ b/frontend/src/pages/port-call/port-call.html
@@ -1,13 +1,7 @@
-<!--
-  Generated template for the PortCallPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{vessel.id}}</ion-title>
+    <ion-title>{{vessel.vesselNumber}}</ion-title>
   </ion-navbar>
 
 </ion-header>
